--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     restart: always
     build: .
     ports:
-      - '80:3000'
+      - '3000:3000'
     links:
       - mongo
   mongo:
@@ -13,3 +13,5 @@ services:
     image: mongo
     ports:
       - '27017:27017'
+  volumes:
+    - ./data/db:/data/db
